@@ -1,3 +1,12 @@
+2021-07-07  Cameron McCormack  <heycam@apple.com>
+
+        Remove unused LayerChange::TilesAdded enum value
+        https://bugs.webkit.org/show_bug.cgi?id=227736
+
+        Reviewed by Simon Fraser.
+
+        * platform/graphics/ca/GraphicsLayerCA.h:
+
 2021-07-07  Chris Dumez  <cdumez@apple.com>
 
         IDBObjectStore.keyPath should keep returning the same object
